Thu May  9 11:10:11 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pager-create.c: Get rid of link warning.

	* pager-create.c (pager_create): ports_allocate_port ->
 	ports_create_port; if we get an error return a null structure.

Thu May  2 11:17:17 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* offer-page.c (pager_offer_page): Make sure we hold lock across
 	operation.  Also set incore bit when operation is complete.

Tue Apr 30 12:40:33 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* lock-object.c (_pager_lock_object): Eliminate spurious extra
 	lock acquisition around pagemap frobbing.

Sun Apr 28 15:46:12 1996  Roland McGrath  <roland@delasyd.gnu.ai.mit.edu>

	* pager-create.c (pager_create): Add link warning.

Thu Apr 18 13:03:55 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* data-return.c (_pager_do_write_request): If kernel didn't keep a
	copy, turn off INCORE bit.  Don't track INIT bit for now.
	* lock-object.c (_pager_lock_object): If SYNC and SHOULD_FLUSH,
 	then turn off PM_INCORE bits when flush is complete.
	* data-request.c (_pager_seqnos_memory_object_data_request): Set
 	PM_INCORE.
	* priv.h (PM_INIT): Comment out.
	(PM_INCORE): New bit.
	* offer-page.c: New file.
	* Makefile (SRCS): Add offer-page.c.
	* pager.h (pager_offer_page): New function.

Thu Apr 11 17:50:57 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* pager-memcpy.c (pager_memcpy [copy]): Return error_t so that
	this function has the proper type as an arg for
	hurd_catch_signal.
	(pager_memcpy): Cast FAULT to proper type in call to
	hurd_catch_signal.

Tue Mar 26 15:38:06 1996  Michael I. Bushnell, p/BSG  <mib@gnu.ai.mit.edu>

	* lock-completed.c: Include <stdio.h>.

	* data-return.c (_pager_do_write_request): Delete unused label
 	`out'.

	* pager-sync.c (pager_sync, pager_sync_some): Ask for RETURN_ALL
	and not just RETURN_DIRTY, because we treat precious pages as
	dirty in this library.